- Fixed bug with right segment getting stuck on the side - Fixed fadein/out - Updated todo.txt - Fixed invisible spawning of segments

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -44,6 +44,10 @@ body{
     color:white;
     text-align: center;
     height:800px;
+    -webkit-user-select: none; /* Chrome, Opera, Safari */
+    -moz-user-select: none; /* Firefox 2+ */
+    -ms-user-select: none; /* IE 10+ */
+    user-select: none; /* Standard syntax */
 }
 #About h1{
     font-size: 60px;
@@ -51,6 +55,9 @@ body{
 #About p{
     margin: 0 5%;
     text-align: left;
+}
+#About h2{
+    padding-top:35px;
 }
 
 /* HEADER */
